Fix visual line-break glitch with .invisible parts of links (#4655)

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -237,6 +237,8 @@
   line-height: 0;
   display: inline-block;
   width: 0;
+  height: 0;
+  position: absolute;
 }
 
 .ellipsis {
